feat: add endpoint to list departments where user can manage tickets